# fediiverse-bridge

./: COPYING.txt  Cargo.toml  README.md  test-release.sh
.zed/: settings.json
src/: main.rs  panic_hook.rs
src/olv/: local_storage.rs  mod.rs  patch.rs
src/qr/: camera.rs  mod.rs  scan.rs  scanner.rs
src/ui/: background.rs  mod.rs  scan.rs
